<?xml version="1.0"?>
<package format="2">
  <name>laminarix</name>
  <version>0.0.1</version>
  <description>TODO</description>
  <maintainer email="todo@todo.todo">cyberbuilder</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>qt_build</build_depend>
  <export>
  </export>
</package>
